<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#68E3F2FD"
    tools:context=".view.SignInActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:rotation="210"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave"
        android:translationX="90dp"
        android:translationY="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wave"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:rotation="205"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_wave2"
        android:translationX="60dp"
        android:translationY="-30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_bag"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/shopshop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_bag">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cookie"
                android:gravity="center"
                android:text="@string/shopshop"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/large_title"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_your_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_title"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:backgroundTint="#DCDCDC"
                    android:drawableEnd="@drawable/ic_baseline_email_24"
                    android:fontFamily="@font/yantramanav"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#DCDCDC"
                    android:drawableEnd="@drawable/ic_baseline_lock_24"
                    android:fontFamily="@font/yantramanav"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="2dp"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/login_button_send"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="32dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_drawable"
                android:fontFamily="@font/yantramanav_black"
                android:text="@string/login"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/yantramanav_black"
        android:text="@string/dont_have_account"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toStartOf="@id/register_now_tv"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_cardview" />

    <TextView
        android:id="@+id/register_now_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/yantramanav_black"
        android:text="@string/register_now"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/normal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_dontHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>